<resources>
    <string name="app_name">sid</string>
    <string name="_00_00_000">00:00:000</string>
    <string name="filtrar">Filtrar</string>
    <string name="escolher_data">Escolher data</string>
    <string name="alterar_para_a_data">Alterar para a data</string>
    <string name="limite_inferior">Hora Inicio</string>
    <string name="limite_superior">Hora Fim</string>
    <string name="Filtrar">Filtrar</string>
    <string name="login_errado">Login Errado!</string>
</resources>
